--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .main-bg {
@@ -11,5 +13,5 @@
 }
 
 .container {
-  padding: 0 3rem;
+  padding: 0.5rem 3rem;
 }
