--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,3 +15,13 @@
 .container {
   padding: 0.5rem 3rem;
 }
+
+.main h1 {
+  font-size: 4rem;
+}
+
+.main p {
+  color: #95897e;
+  margin-top: 1.5rem;
+  text-align: center;
+}
