--- a/frontend/src/assets/css/Footer.css
+++ b/frontend/src/assets/css/Footer.css
@@ -1,96 +1,83 @@
 .footer {
   background: linear-gradient(rgb(144, 166, 143) 0%, rgb(144, 166, 143) 100%);
-}
-
-.shoe__icon {
-  color: #fff;
-  font-size: 3rem;
+  color: rgb(135, 255, 255);
+  padding: 2rem 1rem;
+  text-align: center;
 }
 
 .footer__container {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   flex-wrap: wrap;
-  padding-top: 2rem;
+  justify-content: space-between;
+  gap: 1.5rem;
 }
 
-.footer ul,
-.footer__copyright {
-  display: flex;
-  flex-direction: column;
+.footer__section {
+  flex: 1;
+  min-width: 200px;
 }
 
-.footer__copyright {
-  width: 100%;
+.footer__title {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  color: #fff;
+}
+
+.footer__list {
+  list-style: none;
+  padding: 0;
+}
+
+.footer__item {
+  margin-bottom: 0.5rem;
+}
+
+.footer__link {
+  text-decoration: none;
+  color: rgb(135, 255, 255);
+  transition: color 0.3s ease;
+}
+
+.footer__link:hover {
+  color: #fff;
+}
+
+.footer__bottom {
+  margin-top: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  text-align: center;
-  margin-top: 2rem;
+  flex-direction: column;
 }
 
-.footer span,
-.footer a {
-  color: rgb(135, 255, 255);
-}
-
-.footer ul {
-  gap: 0.5rem;
-  margin-top: 0.5rem;
-}
-
-.footer__quickLinks,
-.customer__support,
-.company__info {
-  width: 30%;
-}
-
-.footer__quickLinks--item,
-.customer__support--item,
-.company__info--item {
-  margin: 0.5rem 0;
-}
-
-.footer__quickLinks--anchor,
-.customer__support--anchor,
-.company__info--anchor {
-  text-decoration: none;
-  color: rgb(135, 255, 255);
+.footer__icon {
+  font-size: 2rem;
+  color: #fff;
 }
 
 @media screen and (max-width: 768px) {
-  .footer__quickLinks,
-  .customer__support,
-  .company__info {
-    width: 100%;
-    text-align: center;
-  }
-
   .footer__container {
     flex-direction: column;
     align-items: center;
   }
-  .footer__quickLinks,
-  .customer__support,
-  .company__info {
-    width: 45%;
-    margin-bottom: 2rem;
-  }
-
-  .footer__container {
-    justify-content: space-around;
-  }
 }
 
 @media screen and (max-width: 480px) {
-  .shoe__icon {
-    font-size: 2rem;
+  .footer__icon {
+    font-size: 1.5rem;
   }
 
-  .footer span,
-  .footer a {
+  .footer__title {
+    font-size: 1.25rem;
+  }
+
+  .footer__link {
     font-size: 0.875rem;
+  }
+
+  .footer__bottom {
+    flex-direction: column;
+    gap: 0.5rem;
   }
 }
