--- a/frontend/src/assets/css/AdminPanelSection.css
+++ b/frontend/src/assets/css/AdminPanelSection.css
@@ -1,7 +1,16 @@
 .admin-panel {
   padding: 20px;
-  background-color: #f8f9fa;
-  font-family: Arial, sans-serif;
+  height: 100vh;
+}
+
+.notification {
+  background-color: #e0f7fa;
+  color: #00695c;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #004d40;
+  border-radius: 5px;
+  text-align: center;
 }
 
 .admin-panel h1 {
