--- a/frontend/src/assets/css/CategoriesPage.css
+++ b/frontend/src/assets/css/CategoriesPage.css
@@ -1,3 +1,13 @@
+@keyframes fadeInOut {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
 .categories-section {
   text-align: center;
   padding: 20px;
@@ -44,13 +54,14 @@
 
 .part-item {
   margin: 10px;
-  padding: 20px;
+  padding: 2rem;
   background-color: #ffffff;
   border: 1px solid #ccc;
   border-radius: 8px;
   width: 200px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
+  position: relative;
 }
 
 .part-image {
@@ -124,6 +135,40 @@
   background: linear-gradient(rgb(100, 120, 100) 0%, rgb(100, 120, 100) 100%);
 }
 
+.part-prices {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #333;
+}
+
+.part-prices span {
+  margin: 5px 0;
+}
+
+.part-discount {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: red;
+  padding: 0.3rem;
+  font-size: 0.9rem;
+  border-bottom-left-radius: 1rem;
+  color: #fff;
+  animation: fadeInOut 4s infinite;
+}
+
+.part-originalPrice {
+  text-decoration: line-through;
+  color: red;
+  font-style: italic;
+}
+
+.part-discountedPrice {
+  font-weight: 700;
+  font-style: italic;
+}
 @media (hover: none) {
   button:hover,
   .category-button:hover,
